replacing Base64 parser from 'sun.misc.' with a hackish but supported JDK parser